<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_series"
        android:icon="@drawable/ic_search"
        android:orderInCategory="100"
        android:title="@string/search_shows"
        app:showAsAction="never" />

    <item
        android:id="@+id/search_person"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="100"
        android:title="@string/search_person"
        app:showAsAction="never" />

    <item
        android:id="@+id/favorites"
        android:icon="@android:drawable/ic_menu_compass"
        android:orderInCategory="100"
        android:title="@string/favorites"
        app:showAsAction="never" />

    <item
        android:id="@+id/lock"
        android:orderInCategory="100"
        android:icon="@drawable/ic_lock"
        app:iconTint="@color/textColor"
        android:title="@string/lock"
        app:showAsAction="ifRoom" />

</menu>
