<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/passwordProtectBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        android:background="@android:color/transparent">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ActionBarStyle"
            android:id="@+id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/default_margin">

                <ImageView
                    android:id="@+id/back_button"
                    android:src="@drawable/ic_arrow_back"
                    app:tint="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    style="@style/TextSemiBold"
                    android:id="@+id/person_title"
                    android:textSize="@dimen/default_text_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/password_lock"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <TextView
                android:id="@+id/text_view"
                style="@style/TextSemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/default_margin_double"
                android:text="@string/type_password_to_lock"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_text_text_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="password_toggle"
                app:placeholderText="Type your password"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin_double"
                app:layout_constraintTop_toBottomOf="@id/text_view">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_text_input"
                    style="@style/TextMedium"
                    android:inputType="numberPassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/default_text_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_lock"
                style="@style/DarkButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:layout_marginTop="@dimen/default_margin_double"
                android:text="@string/enable_lock"
                app:layout_constraintTop_toBottomOf="@id/edit_text_text_container"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>